[package]
name = "hardliner"
version = "0.1.0"
authors = ["main() <main@ehvag.de>"]

[dependencies]
gimli = "0.14"
fallible-iterator = "0.1"
object = "0.4"
intervaltree = "0.2"
smallvec = "0.4"
rustc-demangle = { version = "0.1", optional = true }
cpp_demangle = { version = "0.2", optional = true }

[dev-dependencies]
memmap = "0.5"
clap = "2"
backtrace = "0.3"
findshlibs = "0.3"
rustc-test = "0.2"
unwind = { path = "../unwind" }

[features]
default = ["rustc-demangle", "cpp_demangle"]

[[test]]
name = "output_equivalence"
harness = false

[[test]]
name = "correctness"
